src/test/ui/missing/missing-stability.stderr
error: node has missing stability attribute
  --> $DIR/missing-stability.rs:8:1
   |
LL | / pub fn unmarked() {
LL | |     //~^ ERROR node has missing stability attribute
LL | |     ()
LL | | }
   | |_^

error: node has missing stability attribute
  --> $DIR/missing-stability.rs:22:5
   |
LL |     pub fn unmarked() {}
   |     ^^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

